# OpenCTR-Tools

./: .clang-format  .editorconfig  .travis.yml  CMakeLists.txt  README.rst
3dstools/: CMakeLists.txt
3dsxtool/: 3dsxtool-config.cmake  3dsxtool-config.cmake.in  CMakeLists.txt  README.rst
3dsxtool/include/: 3dsx.h  FileClass.h  elf.h
3dsxtool/src/: 3dsxtool.cpp
CMake/: CMakeExportPackage.cmake  FindLibELF.cmake
artool/: CMakeLists.txt  README.rst  artool-config.cmake  artool-config.cmake.in  config.h.in
artool/src/: main.c
cmake/Modules/: CMakeProjectSettings.cmake  CMakeProjectVersion.cmake  FindLibELF.cmake
ctrxtool/: CMakeLists.txt  config.h.in
ctrxtool/include/: ctrx.h  elf.h  endian.h  utils.h
ctrxtool/source/: ctrx.c  elf.c  main.c  utils.c
smdhtool/: CMakeLists.txt
